--- a/player.html
+++ b/player.html
@@ -19,9 +19,9 @@
             color: #333;
         }
         video {
-            margin-top: 20px;
-            width: 80%;
-            max-width: 720px;
+            margin:auto;
+            width: 100%;
+            max-width: 1080px;
         }
     </style>
 </head>
