--- a/player.html
+++ b/player.html
@@ -44,6 +44,10 @@
             const cleanUrl = videoUrl.startsWith('?video=') ? videoUrl.slice(7) : videoUrl;
             const decodedUrl = decodeURIComponent(cleanUrl);
 
+             if (window.location.protocol === 'https:' && decodedUrl.startsWith('http:')) {
+                decodedUrl = decodedUrl.replace('http:', 'https:');
+            }
+
             if (decodedUrl.indexOf('.m3u8')>0) {
                 if (Hls.isSupported()) {
                     const hls = new Hls();
