--- a/player.html
+++ b/player.html
@@ -42,13 +42,13 @@
 
         if (videoUrl) {
             const cleanUrl = videoUrl.startsWith('?video=') ? videoUrl.slice(7) : videoUrl;
-            var decodedUrl = decodeURIComponent(cleanUrl);
+            let decodedUrl = decodeURIComponent(cleanUrl);
 
-             if (window.location.protocol === 'https:' && decodedUrl.startsWith('http:')) {
+            if (window.location.protocol === 'https:' && decodedUrl.startsWith('http:')) {
                 decodedUrl = decodedUrl.replace('http:', 'https:');
             }
 
-            if (decodedUrl.indexOf('.m3u8')>0) {
+            if (decodedUrl.indexOf('.m3u8') > 0) {
                 if (Hls.isSupported()) {
                     const hls = new Hls();
                     hls.loadSource(decodedUrl);
@@ -56,11 +56,13 @@
                     hls.on(Hls.Events.MANIFEST_PARSED, function () {
                         videoPlayer.play();
                     });
+                  message.style.display = 'none';
                 } else if (videoPlayer.canPlayType('application/vnd.apple.mpegurl')) {
                     videoPlayer.src = decodedUrl;
                     videoPlayer.addEventListener('loadedmetadata', function () {
-                        videoPlayer.play();
+                        videoPlayer.play();                      
                     });
+                  message.style.display = 'none';
                 } else {
                     message.textContent = 'Your browser does not support HLS playback.';
                 }
